Fixing navbar on top / hidden scrollbar on mobile

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,8 +1,8 @@
 .slider {
+  top: 4rem;
   position: relative;
   width: 78%;
-
-  margin: 0 auto;
+  margin: 1rem auto;
   overflow: hidden;
   height: 22rem;
   border-radius: 25px;
