--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+body {  
   margin: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -76,3 +76,8 @@ code {
   border-radius: 15px;
 }
 
+@media (max-width: 1024px) {
+  ::-webkit-scrollbar{
+    display: none;
+  }
+}
